--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   chewie: ^0.9.10
   flutter:
     sdk: flutter
-  flutter_svg: ^0.17.4
+  #flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.0
   flutter_widget_from_html_core: 
     git:
         url: https://github.com/nagygyula21/flutter_widget_from_html
